# rust_pokemonAPI_client

./: Cargo.toml
src/: main.rs
src/logic/: api.rs  mod.rs
src/ui/: app.rs  mod.rs
