[package]
name = "Pokedex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } 
reqwest = { version = "0.11.12", features = ["json"]}
tokio = { version = "1", features = ["full"] }